--- a/src/App.css
+++ b/src/App.css
@@ -42,3 +42,35 @@
   max-width: 1360px; /* Подстроить под свои нужды */
   height: auto;
 }
+
+.container img {
+  width: 100%;
+  max-width: 1360px;
+  height: auto;
+}
+
+.container img {
+  width: 100%;
+  max-width: 1360px;
+  height: auto;
+}
+
+.tooltip {
+  position: fixed;
+  background-color: rgba(255, 165, 0, 0.7); /* Желто-оранжевый полупрозрачный фон */
+  padding: 8px 15px;
+  border-radius: 5px;
+  color: white;
+  white-space: nowrap;
+  transform: translate(-50%, -100%); /* Центрирование и поднятие над точкой клика */
+  pointer-events: none; /* Позволяет кликам проходить через тултип */
+}
+
+.selection p {
+  font-size: 16px;
+  color: #333;
+}
+
+area {
+  cursor: pointer;
+}
