--- a/src/App.css
+++ b/src/App.css
@@ -61,9 +61,8 @@
 
 .tooltip {
   position: absolute;
-  background-color: rgba(255, 165, 0, 0.7); /* Желто-оранжевый полупрозрачный фон */
+  background-color: rgba(66, 66, 66, 0.7);
   padding: 8px 15px;
-  border-radius: 5px;
   color: white;
   white-space: nowrap;
   transform: translate(-50%, -100%); /* Центрирование и поднятие над точкой клика */
