--- a/src/App.css
+++ b/src/App.css
@@ -14,13 +14,13 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #282c34;  
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: 25px;
+  line-height: 30px;
   color: white;
 }
 
@@ -35,6 +35,10 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.container {
+  display: flex;
 }
 
 .container img {
@@ -77,4 +81,46 @@
 
 area {
   cursor: pointer;
+}
+
+.arckhem-logs {  
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: calc(100vh - 200px);
+  border: 1px solid #ccc;
+}
+
+.col {
+  display: flex;
+  width: 50%;
+}
+
+.log-article {
+  width: 100%;
+}
+
+.form {
+  display: flex;
+  flex-direction: row;
+  margin-top: auto;
+}
+
+.input {
+  display: flex;
+  width: 100%;
+}
+
+.button {
+  cursor: pointer;
+}
+
+.article {
+  text-align: left;
+  padding: 15px;
+}
+
+.log-text {
+  height: calc(100vh - 250px);
+  overflow-y: auto;
 }
