--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 .App {
   text-align: center;
 }
@@ -19,7 +23,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: 25px;
+  font-size: 20px;
   line-height: 30px;
   color: white;
 }
@@ -96,6 +100,11 @@ area {
   width: 50%;
 }
 
+.col-65 {
+  display: flex;
+  width: 65%;
+}
+
 .log-article {
   width: 100%;
 }
@@ -122,5 +131,6 @@ area {
 
 .log-text {
   height: calc(100vh - 250px);
+  padding: 15px 0;
   overflow-y: auto;
 }
