--- a/src/App.css
+++ b/src/App.css
@@ -92,11 +92,7 @@ area {
 }
 
 .arckhem-logs {  
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  height: calc(100vh - 200px);
-  border: 1px solid #ccc;
+
 }
 
 .col {
@@ -112,6 +108,11 @@ area {
 .content {
   display: flex;
   width: 70%;
+
+  display: flex;
+  flex-direction: column;
+  height: calc(100vh - 150px);
+  border: 1px solid #ccc;
 }
 
 .score {
@@ -144,7 +145,7 @@ area {
 }
 
 .log-text {
-  height: calc(100vh - 238px);
+  height: calc(100vh - 188px);
   padding: 15px 0;
   overflow-y: auto;
   scroll-behavior: smooth;
@@ -152,4 +153,29 @@ area {
 
 h3 {
   margin-bottom: 0;
+}
+
+.menu {
+  display: flex;
+  flex-direction: column;
+  list-style-type: none;
+  justify-content: flex-start;
+}
+
+.menu a {
+  display: flex;
+  padding: 10px 10px;
+  text-decoration: none;
+  color: #000;
+  font-size: 16px;
+}
+
+.menu a:hover,
+.menu a.active {
+  color: #fff;
+  background: #666;
+}
+
+.menu a:hover {
+  background: #444;
 }
