--- a/src/App.css
+++ b/src/App.css
@@ -133,6 +133,7 @@ area {
 .input {
   display: flex;
   width: 100%;
+  height: 36px;
 }
 
 .button {
@@ -179,3 +180,19 @@ h3 {
 .menu a:hover {
   background: #444;
 }
+
+.addressRecord {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 5px 15px;
+}
+
+.addressRecord:nth-child(odd) {
+  background: #ddd;
+}
+
+.addressRecord:hover {
+  background: #ccc;
+}
+
