--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,14 @@
 
 @layer utilities {
   .bg-arkham-background {
-    background-image: url('/img/mist-texture.png');
+    background-image: url('/img/bg.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+  }
+
+  .bg-arkham-book {
+    background-image: url('/img/book.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -12,14 +19,30 @@
 }
 
 @layer base {
+  /* :root {
+    color-scheme: dark;
+  } */
+
   html, body {
     margin: 0;
     padding: 0;
     height: 100%;
+    overflow: hidden;
     font-family: 'EB Garamond', serif;
   }
 
   * {
     box-sizing: border-box;
+  }
+
+  p {
+    margin-bottom: 10px;
+    text-align: justify
+  }
+}
+
+@layer components {
+  .paper-card {
+    @apply bg-[#f5f0db] text-gray-800 p-6 rounded-lg shadow-md border border-[#d2c6aa];
   }
 }
