--- a/src/index.css
+++ b/src/index.css
@@ -1,70 +1,62 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
 
-@layer utilities {
-  .bg-arkham-background {
-    background-image: url('/img/bg.png');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-  }
-
-  .bg-arkham-book {
-    background-image: url('/img/book.png');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-  }
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  overflow: hidden;
+  font-family: 'EB Garamond', serif;
 }
 
-@layer base {
-  html, body {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    overflow: hidden;
-    font-family: 'EB Garamond', serif;
-  }
-
-  * {
-    box-sizing: border-box;
-  }
-
-  p {
-    margin-bottom: 10px;
-    text-align: justify
-  }
-
-  ::-webkit-resizer {
-    background: transparent;
-  }
-  
-  ::-webkit-scrollbar-corner {
-    background-color: transparent;
-  }
-  
-  ::-webkit-scrollbar {
-    width: 8px;
-    background: transparent;
-  }
-  
-  ::-webkit-scrollbar-track {
-    border-radius: 8px;
-  }
-  
-  ::-webkit-scrollbar-thumb {
-    border-radius: 8px;
-    background-color: #6b3f22;
-  }
-  
-  ::-webkit-scrollbar-thumb:hover {
-    background-color: #6b3f22;
-  }
+* {
+  box-sizing: border-box;
 }
 
-@layer components {
-  .paper-card {
-    @apply bg-[#f5f0db] text-gray-800 p-6 rounded-lg shadow-md border border-[#d2c6aa];
-  }
+p {
+  margin-bottom: 10px;
+  text-align: justify
+}
+
+::-webkit-resizer {
+  background: transparent;
+}
+
+::-webkit-scrollbar-corner {
+  background-color: transparent;
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+  background: transparent;
+}
+
+::-webkit-scrollbar-track {
+  border-radius: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 8px;
+  background-color: #6b3f22;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #6b3f22;
+}
+
+.bg-arkham-background {
+  background-image: url('/img/bg.png');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.bg-arkham-book {
+  background-image: url('/img/book.png');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.paper-card {
+  @apply bg-[#f5f0db] text-gray-800 p-6 rounded-lg shadow-md border border-[#d2c6aa];
 }
