--- a/src/index.css
+++ b/src/index.css
@@ -50,13 +50,11 @@ p {
   background-repeat: no-repeat;
 }
 
-.bg-arkham-book {
+
+.arkhem-content {
   background-image: url('/img/book.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-}
-
-.paper-card {
-  @apply bg-[#f5f0db] text-gray-800 p-6 rounded-lg shadow-md border border-[#d2c6aa];
+  @apply bg-[#f8f5e4] shadow-lg rounded-lg p-7 font-serif text-gray-800 leading-relaxed overflow-y-auto
 }
