--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 
-html, body {
+html,
+body {
   margin: 0;
   padding: 0;
   height: 100%;
@@ -14,7 +15,7 @@ html, body {
 
 p {
   margin-bottom: 10px;
-  text-align: justify
+  text-align: justify;
 }
 
 ::-webkit-resizer {
@@ -50,11 +51,9 @@ p {
   background-repeat: no-repeat;
 }
 
-
-.arkhem-content {
+.arkhem-book-bg {
   background-image: url('/img/book.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  @apply bg-[#f8f5e4] shadow-lg rounded-lg p-7 font-serif text-gray-800 leading-relaxed overflow-y-auto
 }
